--- a/apps/catalog/catalog/src/app/marketplace/title/avails/avails.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/avails.component.html
@@ -77,7 +77,7 @@
                         </li>
                       </ul>
                       <button fxFlexAlign="end" mat-button class="spacing" (click)="openTerritoryModal(term)">
-                        ...See all the selected coutries
+                        ...See all selected countries
                       </button>
                     </div>
                   </ng-container>
