Fix Data Privacy style in modals

--- a/libs/user/src/lib/auth/components/privacy-policy-text/privacy-policy-text.component.scss
+++ b/libs/user/src/lib/auth/components/privacy-policy-text/privacy-policy-text.component.scss
@@ -1,17 +1,5 @@
 @import '@angular/flex-layout/mq';
 
-header {
-  padding: 100px 0;
-  margin: 0 auto;
-  width: 60%;
-  h1 {
-    text-align: center;
-  }
-  mat-icon {
-    cursor: pointer;
-  }
-}
-
 .surface {
   margin-top: 50px;
   margin-bottom: 50px;
@@ -20,26 +8,33 @@ header {
     list-style-type: disc;
     margin-left: 16px;
   }
+
+  &.modal {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 @include layout-bp(lt-lg) {
-  header {
-    width: 80%;
-  }
   .surface {
     width: 80%;
     margin-top: 50px;
+    &.modal {
+      width: 100%;
+      margin: 0;
+    }
   }
 }
 
 @include layout-bp(xs) {
-  header {
-    width: 100%;
-  }
   .surface {
     width: 100%;
     margin-top: 30px;
     margin-bottom: 30px;
+    &.modal {
+      width: 100%;
+      margin: 0;
+    }
   }
 }
 
