--- a/libs/user/src/lib/auth/components/privacy-policy/privacy-policy.component.html
+++ b/libs/user/src/lib/auth/components/privacy-policy/privacy-policy.component.html
@@ -6,5 +6,5 @@
     <h1>DATA PRIVACY POLICY</h1>
   </header>
 
-  <auth-privacy-policy-text></auth-privacy-policy-text>
+  <auth-privacy-policy-text modal ></auth-privacy-policy-text>
 </global-modal>
