--- a/libs/user/src/lib/auth/components/terms-conditions/terms-conditions.component.html
+++ b/libs/user/src/lib/auth/components/terms-conditions/terms-conditions.component.html
@@ -162,7 +162,7 @@
               <li>Access a library of films,</li>
               <li>Access editorialized Content,</li>
               <li>
-                - Access Film Pages with metadata, promotional elements, downloadable images as made available by the
+                Access Film Pages with metadata, promotional elements, downloadable images as made available by the
                 applicable Seller,
               </li>
               <li>Access Sellers' profiles with contact details of the Seller’s members (name, email, position),</li>
@@ -172,7 +172,7 @@
               <li>Receive notifications (via emails and/or SMS at the User’s election),</li>
               <li>Partially manage Your personal schedule (add events to personal calendar),</li>
               <li>
-                - Access live Events during specific timeframes, with a personal watermark appearing on any video
+                Access live Events during specific timeframes, with a personal watermark appearing on any video
                 content,
               </li>
               <li>Access a list of all upcoming Screenings,</li>
