--- a/apps/festival/festival/src/app/marketplace/organization/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/organization/list/list.component.html
@@ -33,6 +33,11 @@
         <mat-label>Type and select Country</mat-label>
       </chips-autocomplete>
     </ng-template>
+
+    <button mat-button class="refresh translucent" (click)="clear()" matTooltip="Clear all filters">
+      <mat-icon svgIcon="refresh_filters"></mat-icon>
+      Clear Filters
+    </button>
   </list-filter>
 
   <ng-template listPageCard let-org>
