--- a/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
+++ b/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
@@ -76,7 +76,7 @@
     </ng-template>
   </bf-form-table>
 
-  <footer class="actions" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px">
+  <footer class="actions">
     <button mat-flat-button color="primary" (click)="saveAndClose()" [disabled]="false">Add Holdbacks</button>
     <button mat-button (click)="close()">Cancel</button>
   </footer>
