--- a/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.scss
+++ b/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.scss
@@ -1,3 +1,20 @@
 p {
   text-align: center;
 }
+
+mat-divider {
+  margin-bottom: 16px
+}
+
+div.duration {
+  display: flex;
+  gap: 16px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  margin-top: 16px;
+}
