--- a/apps/festival/festival/src/app/marketplace/event/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/event/list/list.component.html
@@ -3,8 +3,7 @@
     <h1 class="mat-display-2 page-title">Screening List</h1>
   </list-page-title>
 
-  <!-- (#8301)  Remove the filter for screnning list since it's not really used (#8301) 
-    but keep it commented if UI changes its mind-->
+  <!-- TODO : #8383-->
   <!-- <list-filter fxLayout fxLayoutAlign="center">
     <ng-template filter label="Sales Agents" [form]="searchForm">
       <algolia-chips-autocomplete index="org" displayWithPath="name"
