--- a/apps/festival/festival/src/app/marketplace/organization/list/list.component.scss
+++ b/apps/festival/festival/src/app/marketplace/organization/list/list.component.scss
@@ -9,10 +9,7 @@ mat-form-field {
 list-filter {
   display: flex;
   justify-content: center;
-}
-
-button {
-  margin-bottom: 24px;
+  padding-bottom: 24px;
 }
 
 .loading {
