--- a/libs/user/src/lib/auth/components/privacy-policy-text/privacy-policy-text.component.html
+++ b/libs/user/src/lib/auth/components/privacy-policy-text/privacy-policy-text.component.html
@@ -1,5 +1,5 @@
 <section fxLayout="row" fxLayoutAlign="center">
-  <div [class]="this.modal ? 'surface modal' : 'surface'">
+  <div [ngClass]="{ modal: this.modal, surface: true }">
       <article>
         <p>
           The following websites and platforms are edited by the company CASCADE 8, whose
