--- a/libs/organization/src/lib/organization/components/chip/chip.component.scss
+++ b/libs/organization/src/lib/organization/components/chip/chip.component.scss
@@ -4,7 +4,7 @@
 
 a {
   border-radius: 20px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   transition: background-color 0.2s;
 }
