--- a/styles/style.scss
+++ b/styles/style.scss
@@ -86,3 +86,9 @@ main {
     }
   }
 }
+
+body {
+  .intercom-lightweight-app, .intercom-namespace {
+    z-index: 999; // It needs to be above everything except the cdk-overlay, which has a z-index: 1000
+  }
+}
