--- a/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
+++ b/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
@@ -1,5 +1,5 @@
 <global-modal>
-  <header fxLayout fxLayoutAlign="center">
+  <header fxLayout fxLayoutAlign="center center">
     <h2>Holdback for "{{ data.title.title.international }}"</h2>
   </header>
 
