--- a/libs/ui/src/lib/global-modal/global-modal.component.html
+++ b/libs/ui/src/lib/global-modal/global-modal.component.html
@@ -1,5 +1,5 @@
 <section [class]="data.size">
-  <button mat-icon-button (click)="close()" class="closeButton">
+  <button mat-icon-button (click)="close()">
     <mat-icon svgIcon="close"></mat-icon>
   </button>
   
