--- a/apps/festival/festival/src/app/dashboard/title/list/list.component.html
+++ b/apps/festival/festival/src/app/dashboard/title/list/list.component.html
@@ -32,12 +32,12 @@
     </header>
 
     <bf-table [source]="result$ | async" pagination="50" useFilter>
-      <ng-template colRef label="Title" let-movie sort>
+      <ng-template colRef label="Title" let-movie sort [filter]="filters.movieTitle">
         <a [routerLink]="movie.id" [matTooltip]="movie.title.international">
           <u>{{ movie.title.international | maxLength:50 }}</u>
         </a>
       </ng-template>
-      <ng-template colRef label="Director(s)" let-movie>
+      <ng-template colRef label="Director(s)" let-movie [filter]="filters.movieDirectors">
         <span (click)="openDetails('Director\'s', movie.directors)">
           {{ movie.directors | displayName | maxLength:50 }}
         </span>
