--- a/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
@@ -27,7 +27,7 @@
     </header>
 
     <bf-table [source]="titles" useFilter pagination="50">
-      <ng-template colRef label="Title" let-movie sort defaultSort>
+      <ng-template colRef label="Title" let-movie sort defaultSort [filter]="filters.movieTitle">
         <a [routerLink]="movie.id" [matTooltip]="movie.title.international">
           <u>{{ movie.title.international | maxLength:50 }}</u>
         </a>
