--- a/libs/media/src/lib/image/uploader/uploader.component.html
+++ b/libs/media/src/lib/image/uploader/uploader.component.html
@@ -15,9 +15,11 @@
   </article>
 
   <!-- Hovering -->
-  <article *ngSwitchCase="'hovering'" class="drop-zone">
-    <img asset="add_files.svg" alt="upload image" class="picture-hover">
-    <h3>Drop your file here</h3>
+  <article *ngSwitchCase="'hovering'" class="drop-zone" fxLayoutAlign="center center">
+    <span>
+      <img asset="add_files.svg" alt="upload image" class="picture-hover">
+      <h3>Drop your file here</h3>
+    </span>
   </article>
 
   <!-- Crop -->
