--- a/libs/contract/src/lib/contract/components/confirm-decline/confirm-decline.component.html
+++ b/libs/contract/src/lib/contract/components/confirm-decline/confirm-decline.component.html
@@ -21,8 +21,8 @@
     </mat-form-field>
     <div *ngIf="data.showAcceptTermsCheckbox" class="validation-checkbox" fxLayout="column" fxLayoutAlign="center center">
       <p><strong>Before you accept this contract, please agree on the following:</strong></p>
-      <mat-checkbox formControlName="acceptTerms">
-        I hereby accept the policy regarding accepted offers, as mentioned in the <a [routerLink]="termsPath" fragment="article11" target="_blank">Terms and Conditions.</a>
+      <mat-checkbox formControlName="acceptTerms" color="primary">
+        <span class="mat-caption">I hereby accept the policy regarding accepted offers, as mentioned in the <a [routerLink]="termsPath" fragment="article11" target="_blank">Terms and Conditions.</a></span>
       </mat-checkbox>
     </div>
     <footer fxLayout="column" fxLayoutAlign="center center">
