--- a/libs/contract/src/lib/contract/components/confirm-with-validation/confirm-with-validation.component.html
+++ b/libs/contract/src/lib/contract/components/confirm-with-validation/confirm-with-validation.component.html
@@ -6,8 +6,8 @@
     </div>
     <div fxLayout="column" fxLayoutAlign="center center">
       <p><strong>Before you accept this contract, please agree on the following:</strong></p>
-      <mat-checkbox [formControl]="acceptTerms">
-        I hereby accept the policy regarding accepted offers, as mentioned in the <a [routerLink]="termsPath" fragment="article11" target="_blank">Terms and Conditions.</a>
+      <mat-checkbox [formControl]="acceptTerms" color="primary">
+        <span class="mat-caption">I hereby accept the policy regarding accepted offers, as mentioned in the <a [routerLink]="termsPath" fragment="article11" target="_blank">Terms and Conditions.</a></span>
       </mat-checkbox>
     </div>
     <div mat-dialog-actions fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px">
