--- a/libs/contract/src/lib/contract/components/confirm-with-validation/confirm-with-validation.component.scss
+++ b/libs/contract/src/lib/contract/components/confirm-with-validation/confirm-with-validation.component.scss
@@ -25,4 +25,10 @@ button.close {
 
 mat-checkbox {
   margin-bottom: 12px;
+  max-width: 70%;
+
+  span {
+    display: flex;
+    flex-flow: row wrap;
+  }
 }
