Fix 'previous page' buton on mobile

--- a/libs/organization/src/lib/organization/pages/view/view.component.scss
+++ b/libs/organization/src/lib/organization/pages/view/view.component.scss
@@ -30,6 +30,12 @@ img {
   }
 }
 
+@include layout-bp(lt-sm) {
+  header {
+    height: fit-content;
+  }
+}
+
 @include layout-bp(xs) {
   header, section {
     padding: 0px;
