Fix the second table which has wrong written classname

--- a/libs/user/src/lib/auth/components/privacy-policy-text/privacy-policy-text.component.html
+++ b/libs/user/src/lib/auth/components/privacy-policy-text/privacy-policy-text.component.html
@@ -317,7 +317,7 @@
           the Service (as authorized under the T&Cs), Our Trusted Partners in order to either provide
           You with the Service or enhance Your user experience.
         </p>
-        <div class="table__wrapper">
+        <div class="table_wrapper">
           <table border="1px solid">
             <tr>
               <th>MF</th>
