--- a/libs/ui/src/lib/global-modal/global-modal.component.scss
+++ b/libs/ui/src/lib/global-modal/global-modal.component.scss
@@ -1,3 +1,5 @@
+@import "@angular/flex-layout/mq";
+
 :host {
   display: block;
 }
@@ -52,5 +54,24 @@ section {
   
   .mat-dialog-content {
     max-height: 302px;
+  }
+}
+
+@include layout-bp(xs) {
+  .large,
+  .medium,
+  .small {
+    padding: 0;
+    padding-top: 48px;
+    width: calc(80vw - 48px);
+    max-height: calc(80vh - 48px);
+    min-height: 0;
+    max-width: none;
+
+    .mat-dialog-content {
+      max-height: calc(80vh - 96px);
+      margin: 0 -24px;
+      padding: 0 24px;
+    }
   }
 }
