--- a/libs/import/src/lib/table-extracted-elements/contracts/contracts.component.html
+++ b/libs/import/src/lib/table-extracted-elements/contracts/contracts.component.html
@@ -1,35 +1,18 @@
 ﻿<p test-id="record-length">Found <strong>{{ rows.data.length }}</strong> row(s).</p>
 
-<ng-container *ngIf="mode === 'create'; else update">
-  <p>For selection ({{ selection.selected.length }} items selected) :
-    <button test-id="submit-records" mat-stroked-button color="primary" [disabled]="!selection.selected.length"
-      (click)="createSelectedContracts()">
-      <ng-container *ngIf="processedContracts === 0 else createinprogress">
-        <span>Create</span>
-        <mat-icon svgIcon="edit"></mat-icon>
-      </ng-container>
-      <ng-template #createinprogress>
-        <span>Creating... {{ processedContracts }} / {{ selection.selected.length}} </span>
-        <mat-spinner [diameter]="20" [strokeWidth]="2" class="upload-spinner"></mat-spinner>
-      </ng-template>
-    </button>
-  </p>
-</ng-container>
-<ng-template #update>
-  <p>For selection ({{ selection.selected.length }} items selected) :
-    <button test-id="submit-records" mat-stroked-button color="primary" [disabled]="!selection.selected.length"
-      (click)="updateSelectedContracts()">
-      <ng-container *ngIf="processedContracts === 0 else updateinprogress">
-        <span>Update</span>
-        <mat-icon svgIcon="edit"></mat-icon>
-      </ng-container>
-      <ng-template #updateinprogress>
-        <span>Updating... {{ processedContracts }} / {{ selection.selected.length}} </span>
-        <mat-spinner [diameter]="20" [strokeWidth]="2" class="upload-spinner"></mat-spinner>
-      </ng-template>
-    </button>
-  </p>
-</ng-template>
+<p>For selection ({{ selection.selected.length }} items selected) :
+  <button test-id="submit-records" mat-stroked-button color="primary" [disabled]="!selection.selected.length || !!processing"
+    (click)="createSelected()">
+    <ng-container *ngIf="processing === 0 else createinprogress">
+      <span>Create</span>
+      <mat-icon svgIcon="edit"></mat-icon>
+    </ng-container>
+    <ng-template #createinprogress>
+      <span>Creating... {{ processing }} / {{ selection.selected.length}}</span>
+      <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
+    </ng-template>
+  </button>
+</p>
 
 <mat-form-field appearance="outline">
   <mat-label>Filter</mat-label>
@@ -41,13 +24,13 @@
   <!-- Checkbox Column -->
   <ng-container matColumnDef="select">
     <th mat-header-cell *matHeaderCellDef>
-      <mat-checkbox test-id="select-all" (change)="$event ? masterToggle() : null"
+      <mat-checkbox [disabled]="processing > 0" test-id="select-all" (change)="$event ? masterToggle() : null"
         [checked]="selection.hasValue() && isAllSelected()" [indeterminate]="selection.hasValue() && !isAllSelected()"
         [aria-label]="checkboxLabel()" color="primary">
       </mat-checkbox>
     </th>
     <td mat-cell *matCellDef="let row">
-      <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+      <mat-checkbox [disabled]="processing > 0" (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
         [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)" color="primary">
       </mat-checkbox>
     </td>
@@ -90,16 +73,14 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
     <td mat-cell *matCellDef="let element">
-      <ng-container *ngIf="mode === 'update' else create">
-        <button mat-flat-button color="accent" [disabled]="errorCount(element) > 0"
-          (click)="updateContract(element)">Update to v-{{ parseInt(element.contract.id) +1 }}<mat-icon
-            svgIcon="access_time"></mat-icon></button>
-      </ng-container>
-      <ng-template #create>
-        <button mat-flat-button color="primary" [disabled]="errorCount(element) > 0" (click)="createContract(element)">
-          <span>Create</span> <mat-icon svgIcon="edit"></mat-icon>
-        </button>
-      </ng-template>
+      <button mat-flat-button color="primary" [disabled]="isDisabled(element)" (click)="create(element)">
+        <ng-container *ngIf="element.importing">
+          Creating <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
+        </ng-container>
+        <ng-container *ngIf="!element.importing">
+          Create <mat-icon svgIcon="edit"></mat-icon>
+        </ng-container>
+      </button>
     </td>
   </ng-container>
 
