--- a/libs/import/src/lib/table-extracted-elements/movies/movies.component.html
+++ b/libs/import/src/lib/table-extracted-elements/movies/movies.component.html
@@ -1,30 +1,30 @@
 ﻿<p test-id="record-length">Found <strong>{{ rows.data.length }}</strong> movie(s).</p>
-<ng-container *ngIf="mode === 'create'; else update">
+<ng-container *ngIf="mode === 'create'; else updatemode">
   <p>For selection ({{ selection.selected.length }} items selected) :
-    <button test-id="submit-records" mat-stroked-button color="primary" [disabled]="!selection.selected.length || !!processedTitles"
-      (click)="createSelectedMovies()">
-      <ng-container *ngIf="processedTitles === 0 else createinprogress">
+    <button test-id="submit-records" mat-stroked-button color="primary" [disabled]="!selection.selected.length || !!processing"
+      (click)="createSelected()">
+      <ng-container *ngIf="processing === 0 else createinprogress">
         <mat-icon svgIcon="save"></mat-icon>
         <span>Save & finish later</span>
       </ng-container>
       <ng-template #createinprogress>
-        <span>Creating... {{ processedTitles }} / {{ selection.selected.length}} </span>
-        <mat-spinner [diameter]="20" [strokeWidth]="2" class="upload-spinner"></mat-spinner>
+        <span>Creating... {{ processing }} / {{ selection.selected.length}}</span>
+        <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
       </ng-template>
     </button>
   </p>
 </ng-container>
-<ng-template #update>
+<ng-template #updatemode>
   <p>For selection ({{ selection.selected.length }} items selected) :
-    <button test-id="submit-records" mat-stroked-button color="primary" [disabled]="!selection.selected.length || !!processedTitles"
-      (click)="updateSelectedMovies()">
-      <ng-container *ngIf="processedTitles === 0 else updateinprogress">
+    <button test-id="submit-records" mat-stroked-button color="primary" [disabled]="!selection.selected.length || !!processing"
+      (click)="updateSelected()">
+      <ng-container *ngIf="processing === 0 else updateinprogress">
         <mat-icon svgIcon="access_time"></mat-icon>
         <span>Update</span>
       </ng-container>
       <ng-template #updateinprogress>
-        <span>Updating... {{ processedTitles }} / {{ selection.selected.length}}</span>
-        <mat-spinner [diameter]="20" [strokeWidth]="2" class="upload-spinner"></mat-spinner>
+        <span>Updating... {{ processing }} / {{ selection.selected.length}}</span>
+        <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
       </ng-template>
     </button>
   </p>
@@ -40,13 +40,13 @@
   <!-- Checkbox Column -->
   <ng-container matColumnDef="select">
     <th mat-header-cell *matHeaderCellDef>
-      <mat-checkbox test-id="select-all" [disabled]="processedTitles > 0" (change)="$event ? masterToggle() : null"
+      <mat-checkbox test-id="select-all" [disabled]="processing > 0" (change)="$event ? masterToggle() : null"
         [checked]="selection.hasValue() && isAllSelected()" [indeterminate]="selection.hasValue() && !isAllSelected()"
         [aria-label]="checkboxLabel()" color="primary">
       </mat-checkbox>
     </th>
     <td mat-cell *matCellDef="let row">
-      <mat-checkbox [disabled]="processedTitles > 0" (click)="$event.stopPropagation()"
+      <mat-checkbox [disabled]="processing > 0" (click)="$event.stopPropagation()"
         (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)"
         [aria-label]="checkboxLabel(row)" color="primary">
       </mat-checkbox>
@@ -89,17 +89,28 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
     <td mat-cell *matCellDef="let element">
-      <ng-container *ngIf="element.movie.id; else create">
-        <button mat-icon-button color="accent" [disabled]="isSaveOrUpdateDisabledForTitle(element)"
-          (click)="updateMovie(element)">
-          <mat-icon svgIcon="access_time"></mat-icon>
+      <ng-container *ngIf="element.movie.id; else new">
+        <button mat-stroked-button color="accent" [disabled]="isDisabled(element)" (click)="update(element)">
+          <ng-container *ngIf="element.importing">
+            <span>Updating</span>
+            <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
+          </ng-container>
+          <ng-container *ngIf="!element.importing">
+            <mat-icon svgIcon="access_time"></mat-icon>
+            <span>Update</span>
+          </ng-container>
         </button>
       </ng-container>
-      <ng-template #create>
-        <button mat-stroked-button color="primary" [disabled]="isSaveOrUpdateDisabledForTitle(element)"
-          (click)="createMovie(element)">
-          <mat-icon svgIcon="save"></mat-icon>
-          <span>Save</span>
+      <ng-template #new>
+        <button mat-stroked-button color="primary" [disabled]="isDisabled(element)" (click)="create(element)">
+          <ng-container *ngIf="element.importing">
+            <span>Saving</span>
+            <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
+          </ng-container>
+          <ng-container *ngIf="!element.importing">
+            <mat-icon svgIcon="save"></mat-icon>
+            <span>Save</span>
+          </ng-container>
         </button>
       </ng-template>
     </td>
