--- a/libs/import/src/lib/table-extracted-elements/organizations/organizations.component.html
+++ b/libs/import/src/lib/table-extracted-elements/organizations/organizations.component.html
@@ -1,35 +1,18 @@
 ﻿<p test-id="record-length">Found <strong>{{ rows.data.length }}</strong> row(s).</p>
 
-<ng-container *ngIf="mode === 'create'; else update">
-  <p>For selection ({{ selection.selected.length }} items selected) :
-    <button mat-stroked-button color="primary" [disabled]="!selection.selected.length"
-      (click)="createSelectedOrgs()">
-      <ng-container *ngIf="processedOrgs === 0 else createinprogress">
-        <span>Create</span>
-        <mat-icon svgIcon="edit"></mat-icon>
-      </ng-container>
-      <ng-template #createinprogress>
-        <span>Creating... {{ processedOrgs }} / {{ selection.selected.length}} </span>
-        <mat-spinner [diameter]="20" [strokeWidth]="2" class="upload-spinner"></mat-spinner>
-      </ng-template>
-    </button>
-  </p>
-</ng-container>
-<ng-template #update>
-  <p>For selection ({{ selection.selected.length }} items selected) :
-    <button mat-stroked-button color="primary" [disabled]="!selection.selected.length"
-      (click)="updateSelectedOrgs()">
-      <ng-container *ngIf="processedOrgs === 0 else updateinprogress">
-        <span>Update</span>
-        <mat-icon svgIcon="edit"></mat-icon>
-      </ng-container>
-      <ng-template #updateinprogress>
-        <span>Updating... {{ processedOrgs }} / {{ selection.selected.length}} </span>
-        <mat-spinner [diameter]="20" [strokeWidth]="2" class="upload-spinner"></mat-spinner>
-      </ng-template>
-    </button>
-  </p>
-</ng-template>
+<p>For selection ({{ selection.selected.length }} items selected) :
+  <button mat-stroked-button color="primary" [disabled]="!selection.selected.length  || !!processing"
+    (click)="createSelected()">
+    <ng-container *ngIf="processing === 0 else createinprogress">
+      <span>Create</span>
+      <mat-icon svgIcon="edit"></mat-icon>
+    </ng-container>
+    <ng-template #createinprogress>
+      <span>Creating... {{ processing }} / {{ selection.selected.length}}</span>
+      <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>   
+    </ng-template>
+  </button>
+</p>
 
 <mat-form-field appearance="outline">
   <mat-label>Filter</mat-label>
@@ -41,12 +24,12 @@
   <!-- Checkbox Column -->
   <ng-container matColumnDef="select">
     <th mat-header-cell *matHeaderCellDef>
-      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+      <mat-checkbox [disabled]="processing > 0" (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
         [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
       </mat-checkbox>
     </th>
     <td mat-cell *matCellDef="let row">
-      <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+      <mat-checkbox [disabled]="processing > 0" (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
         [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
       </mat-checkbox>
     </td>
@@ -98,15 +81,14 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Actions </th>
     <td mat-cell *matCellDef="let element">
-      <ng-container *ngIf="mode === 'update' else create">
-        <button mat-flat-button color="primary" [disabled]="errorCount(element) > 0"
-        (click)="updateOrg(element)">Update<mat-icon svgIcon="access_time"></mat-icon></button>
-      </ng-container>
-      <ng-template #create>
-        <button mat-flat-button color="primary" [disabled]="errorCount(element) > 0"
-          (click)="createOrg(element)">Create<mat-icon svgIcon="edit"></mat-icon>
-        </button>
-      </ng-template>
+      <button mat-flat-button color="primary" [disabled]="isDisabled(element)" (click)="create(element)">
+        <ng-container *ngIf="element.importing">
+          Creating <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
+        </ng-container>
+        <ng-container *ngIf="!element.importing">
+          Create <mat-icon svgIcon="edit"></mat-icon>
+        </ng-container>
+      </button>
     </td>
   </ng-container>
 
