--- a/apps/catalog/catalog/src/app/marketplace/offer/shell/contract-edit/contract-edit.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/offer/shell/contract-edit/contract-edit.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (ngSubmit)="confirm()">
   <a mat-button routerLink="..">
     <mat-icon svgIcon="arrow_back"></mat-icon>
-    <span>Come back to Negotiation</span>
+    <span>Come back to Contract</span>
   </a>
   <negotiation-form [form]="form" [activeTerm]="activeTerm" [currency]="negotiation?.currency"></negotiation-form>
   <footer fxLayout fxLayoutAlign="space-between center">
