--- a/libs/contract/src/lib/contract/list/internal-sales/internal-sales.component.html
+++ b/libs/contract/src/lib/contract/list/internal-sales/internal-sales.component.html
@@ -35,7 +35,12 @@
       {{ sale.negotiation | negotiationStatus | toLabel: 'contractStatus' }}
     </bf-tag>
   </ng-template>
-  <ng-template colRef="negotiation" label="Negotiation Stage" let-negotiation>
+  <ng-template
+    *ngIf="(filter$ | async) !== 'accepted' && (filter$ | async) !== 'declined'"
+    colRef="negotiation"
+    label="Negotiation Stage"
+    let-negotiation
+  >
     <ng-container *ngIf=" negotiation | negotiationStage | async  as negoStage">
       <span [matTooltip]="negoStage"> {{negoStage | maxLength:50}} </span>
     </ng-container>
