--- a/libs/movie/src/lib/movie/form/summary/media-videos/media-videos.component.scss
+++ b/libs/movie/src/lib/movie/form/summary/media-videos/media-videos.component.scss
@@ -7,26 +7,26 @@ h6 {
   opacity: 0.5;
 }
 
-main {
+ul.controls {
   display: flex;
   flex-direction: column;
   gap: 16px;
+
+  > li {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
 }
 
-section {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-ul {
+ul.videos {
   display: flex;
   flex-direction: column;
   gap: 8px;
   margin: 0;
 }
 
-li, article {
+li.video, article {
   display: flex;
   align-items: center;
   gap: 8px
