Put back 'Discover Titles' buttons in accent

--- a/apps/festival/festival/src/app/marketplace/event/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/event/list/list.component.html
@@ -43,7 +43,7 @@
     <div class="no-screenings" fxLayout="column" fxLayoutAlign="start center">
       <h6>Sorry, there are no Screenings at the moment.</h6>
       <img asset="empty_upcoming_screening.svg" alt="No titles">
-      <a mat-flat-button [routerLink]="['../title']" color="primary">Discover Titles</a>
+      <a mat-flat-button [routerLink]="['../title']" color="accent">Discover Titles</a>
     </div>
   </ng-template>
 
