--- a/libs/ui/src/lib/marketplace/pages/wishlist/wishlist.component.html
+++ b/libs/ui/src/lib/marketplace/pages/wishlist/wishlist.component.html
@@ -64,6 +64,6 @@
   <article fxLayout="column" fxLayoutAlign="center center">
     <h1>Your Company's Wishlist is empty.</h1>
     <img asset="empty_wishlist.svg" alt="No wishlist">
-    <button mat-flat-button color="primary" routerLink="../title">Discover Titles</button>
+    <button mat-flat-button color="accent" routerLink="../title">Discover Titles</button>
   </article>
 </ng-template>
