--- a/libs/contract/src/lib/offer/list/list.component.html
+++ b/libs/contract/src/lib/offer/list/list.component.html
@@ -64,6 +64,6 @@
     <p>Your contracts will appear on this page when you submit them.</p>
     <p>Meanwhile, you can browser our library to discover titles you can be interested in.</p>
     <img asset="empty_results.svg" alt="Empty result image">
-    <a mat-flat-button color="primary" routerLink="../title">Discover Titles</a>
+    <a mat-flat-button color="accent" routerLink="../title">Discover Titles</a>
   </section>
 </ng-template>
