Put back 'Back to Homepage' buttons in accent

--- a/libs/invitation/src/lib/invitation.component.html
+++ b/libs/invitation/src/lib/invitation.component.html
@@ -46,6 +46,6 @@
     <h1>You have no invitation yet.</h1>
     <p>You haven't received any invitations at this time.</p>
     <img asset="empty_invitation.svg" alt="No invitations">
-    <button mat-flat-button color="primary" (click)="leadToHomepage()">Back to Homepage</button>
+    <button mat-flat-button color="accent" (click)="leadToHomepage()">Back to Homepage</button>
   </section>
 </ng-template>
