--- a/libs/event/src/lib/pages/analytics/analytics.component.html
+++ b/libs/event/src/lib/pages/analytics/analytics.component.html
@@ -37,8 +37,7 @@
             <ng-template colRef="email" label="Email Address" let-email sort>{{ email }}</ng-template>
             <ng-template colRef="orgName" label="Company Name" let-orgName sort>{{ orgName || dataMissing }}</ng-template>
             <ng-template colRef="orgActivity" label="Company Activity" let-orgActivity>{{ orgActivity ? (orgActivity | toLabel: 'orgActivity') : dataMissing }}</ng-template>
-            <ng-template colRef="orgCountry" label="Country" let-orgCountry>{{ orgCountry ? (orgCountry | toLabel: 'territories') : dataMissing }}
-            </ng-template>
+            <ng-template colRef="orgCountry" label="Country" let-orgCountry>{{ orgCountry ? (orgCountry | toLabel: 'territories') : dataMissing }}</ng-template>
             <ng-template *ngIf="hasWatchTime" colRef="watchTime" label="watch time" let-watchTime sort>{{ watchTime * 1000 | duration: '0min' }}
             </ng-template>
           </bf-table>
