--- a/libs/movie/src/lib/movie/components/request-asking-price/request-asking-price.component.scss
+++ b/libs/movie/src/lib/movie/components/request-asking-price/request-asking-price.component.scss
@@ -1,3 +1,5 @@
+@import '@angular/flex-layout/mq';
+
 :host {
   display: block;
 }
@@ -21,4 +23,10 @@ mat-spinner {
 
 .button-container button {
   margin-bottom: 8px;
+}
+
+@include layout-bp(xs) {
+  form {
+    padding: 16px;
+  }
 }
