--- a/libs/movie/src/lib/movie/form/available-materials/available-materials.component.html
+++ b/libs/movie/src/lib/movie/form/available-materials/available-materials.component.html
@@ -2,7 +2,7 @@
   <section tunnel-form fxLayout="column" fxLayoutGap="32px" class="surface">
     <span><b>Please upload your available material list</b></span>
     <file-uploader [form]="fileForm" [meta]="['movies', 'delivery', movieId]"
-      [accept]="['pdf','xls', 'docx']" listenToChanges>
+      [accept]="['pdf','xls', 'docx']">
       <h3 title>Document</h3>
     </file-uploader>
     <small>Please note that this document will be available for download on the marketplace.</small>
