--- a/libs/movie/src/lib/movie/form/media-videos/media-videos.component.html
+++ b/libs/movie/src/lib/movie/form/media-videos/media-videos.component.html
@@ -41,7 +41,7 @@
     <h3>Screener</h3>
     <section>
       <p>The screener is the full video of this title, it will be used for virtual screenings.</p>
-      <file-uploader [form]="screenerForm" [meta]="['movies', 'screener', movieId]" accept="video" listenToChanges>
+      <file-uploader [form]="screenerForm" [meta]="['movies', 'screener', movieId]" accept="video">
         <h3 title>Upload Screener</h3>
       </file-uploader>
       <p class="mat-caption">This video is <strong>private</strong> and <strong>cannot be seen by anyone</strong>
@@ -61,7 +61,7 @@
       <mat-checkbox [checked]="salesPitchForm.isPublic" (change)="salesPitchForm.togglePrivacy($event.checked)" color="primary">
         <b>Public</b> (Buyers can see video on Marketplace)
       </mat-checkbox>
-      <file-uploader [form]="salesPitchForm" [meta]="['movies', 'salesPitch', movieId]" accept="video" listenToChanges>
+      <file-uploader [form]="salesPitchForm" [meta]="['movies', 'salesPitch', movieId]" accept="video">
         <h3 title>Sales Pitch Video</h3>
       </file-uploader>
     </section>
