--- a/libs/ui/src/lib/list/page/list-page.component.html
+++ b/libs/ui/src/lib/list/page/list-page.component.html
@@ -47,7 +47,7 @@
         <ng-content select="events-export"></ng-content>
       </div>
       <ng-container *ngIf="!listView; else displayList">
-        <div grid [@fadeList]="items.length">
+        <div grid layout [@fadeList]="items.length">
           <ng-container *ngFor="let item of items; trackBy:trackById">
             <div class="grid-item" [col]="(ltMd$ | async) ? 4 : 3">
 
