update after review part 1

--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -62,7 +62,7 @@
 
     <button mat-button class="refresh translucent" (click)="clear()" matTooltip="Clear all filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
-      Clear Filters
+      <span>Clear Filters</span>
     </button>
   </list-filter>
 
