--- a/libs/import/src/lib/table-extracted-elements/movies/movies.component.html
+++ b/libs/import/src/lib/table-extracted-elements/movies/movies.component.html
@@ -70,19 +70,19 @@
 
   <ng-container matColumnDef="errors">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Errors </th>
-    <td mat-cell *matCellDef="let element" [style.color]="errorCount(element) ? 'red': 'green'"
-      [style.font-weight]="errorCount(element) ? 'bold': 'normal'">
-      <button mat-flat-button color="warn" [disabled]="errorCount(element) === 0"
-        (click)="displayErrors(element)">{{ errorCount(element) }}</button>
+    <td mat-cell *matCellDef="let element" [style.color]="(element | errorCount) ? 'red': 'green'"
+      [style.font-weight]="(element | errorCount) ? 'bold': 'normal'">
+      <button mat-flat-button color="warn" [disabled]="(element | errorCount) === 0"
+        (click)="displayErrors(element)">{{ element | errorCount }}</button>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="warnings">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Warnings </th>
-    <td mat-cell *matCellDef="let element" [style.color]="errorCount(element, 'warning') ? 'orange': 'green'"
-      [style.font-weight]="errorCount(element, 'warning') ? 'bold': 'normal'">
-      <button mat-flat-button color="accent" [disabled]="errorCount(element, 'warning') === 0"
-        (click)="displayErrors(element)">{{ errorCount(element, 'warning') }}</button>
+    <td mat-cell *matCellDef="let element" [style.color]="(element | errorCount : 'warning') ? 'orange': 'green'"
+      [style.font-weight]="element | errorCount : 'warning' ? 'bold': 'normal'">
+      <button mat-flat-button color="accent" [disabled]="(element | errorCount : 'warning') === 0"
+        (click)="displayErrors(element)">{{ element | errorCount : 'warning' }}</button>
     </td>
   </ng-container>
 
@@ -90,7 +90,7 @@
     <th mat-header-cell *matHeaderCellDef> Actions </th>
     <td mat-cell *matCellDef="let element">
       <ng-container *ngIf="element.movie.id; else new">
-        <button mat-stroked-button color="accent" [disabled]="isDisabled(element)" (click)="update(element)">
+        <button mat-stroked-button color="accent" [disabled]="element | isDisabled: processing" (click)="update(element)">
           <ng-container *ngIf="element.importing">
             <span>Updating</span>
             <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
@@ -102,7 +102,7 @@
         </button>
       </ng-container>
       <ng-template #new>
-        <button mat-stroked-button color="primary" [disabled]="isDisabled(element)" (click)="create(element)">
+        <button mat-stroked-button color="primary" [disabled]="element | isDisabled: processing" (click)="create(element)">
           <ng-container *ngIf="element.importing">
             <span>Saving</span>
             <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
