--- a/apps/festival/festival/src/app/dashboard/home/home.component.scss
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.scss
@@ -1,4 +1,5 @@
-@import "@angular/flex-layout/mq";
+@use '@angular/material' as mat;
+@import '@angular/flex-layout/mq';
 
 :host {
   display: flex;
@@ -50,7 +51,7 @@ header {
       align-self: center;
     }
   }
-  
+
   h3 {
     margin-top: 24px;
   }
@@ -75,5 +76,46 @@ header {
   analytics-map {
     width: calc(100% - 8px);
     margin-right: 8px;
+  }
+}
+
+world-map {
+  height: 300px;
+  border-radius: 4px;
+  flex: 1 1 350px;
+}
+
+.colors-card {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  z-index: 2;
+  padding: 8px;
+  border-radius: 4px;
+  background-color: #dee5ff10;
+  color: #434773;
+  @include mat.elevation(1);
+
+  mat-list-item {
+    height: 32px;
+  }
+
+  svg {
+    margin-right: 12px;
+    width: 16px;
+    height: 16px;
+  }
+}
+
+.country-list {
+  padding: 24px;
+  border-radius: 4px;
+  border: 1px solid var(--foreground-divider);
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 270px;
+
+  li {
+    border-bottom: 1px solid var(--foreground-divider);
   }
 }
